修复一些idea给出的建议问题